Closed the resources like connection, preparestatement and resultset

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -19,6 +19,7 @@
 #comparisonHtmls=D:\\C3PConfig\\ComparisonHtmls\\
 #staticXMLVnf=D:\\C3PConfig\\combinedFeatures.xml
 #snmpDump= D:\\C3PConfig\\SnmpDump\\
+#faqDocPath=D:\\C3PConfig\\FAQDocPath\\
 
 ## NAD Configuration #######
 webServiceURI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
@@ -42,6 +43,7 @@ standardConfigPath=/opt/jboss/C3PConfig/StandardConfiguration/
 comparisonHtmls=/opt/jboss/C3PConfig/ComparisonHtmls/
 staticXMLVnf=/opt/jboss/C3PConfig/combinedFeatures.xml
 snmpDump=/opt/jboss/C3PConfig/SnmpDump/
+faqDocPath=/opt/jboss/C3PConfig/FAQDocPath/
 
 ## Megham Configuration #######
 #webServiceURI=http://localhost:8080
@@ -65,7 +67,7 @@ snmpDump=/opt/jboss/C3PConfig/SnmpDump/
 #comparisonHtmls=/opt/C3PConfig/ComparisonHtmls/
 #staticXMLVnf=/opt/C3PConfig/combinedFeatures.xml
 #snmpDump=/opt/C3PConfig/SnmpDump/
-
+#faqDocPath=/opt/C3PConfig/FAQDocPath/
 
 usernameTelnet=cisco
 passwordTelnet=cisco
@@ -126,6 +128,7 @@ templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReco
 #COMPARISON_HTMLS=D:\\C3PConfig\\ComparisonHtmls\\
 #STATIC_XML_VNF=D:\\C3PConfig\\combinedFeatures.xml
 #SNMP_DUMP= D:\\C3PConfig\\SnmpDump\\
+#FAQ_DOC_PATH=D:\\C3PConfig\\FAQDocPath\\
 
 ## NAD Configuration #######
 WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
@@ -149,6 +152,7 @@ STANDARD_CONFIG_PATH=/opt/jboss/C3PConfig/StandardConfiguration/
 COMPARISON_HTMLS=/opt/jboss/C3PConfig/ComparisonHtmls/
 STATIC_XML_VNF=/opt/jboss/C3PConfig/combinedFeatures.xml
 SNMP_DUMP=/opt/jboss/C3PConfig/SnmpDump/
+FAQ_DOC_PATH=/opt/jboss/C3PConfig/FAQDocPath/
 
 ## Megham Configuration #######
 #WEB_SERVICE_URI=http://localhost:8080
@@ -172,6 +176,7 @@ SNMP_DUMP=/opt/jboss/C3PConfig/SnmpDump/
 #COMPARISON_HTMLS=/opt/C3PConfig/ComparisonHtmls/
 #STATIC_XML_VNF=/opt/C3PConfig/combinedFeatures.xml
 #SNMP_DUMP=/opt/C3PConfig/SnmpDump/
+#FAQ_DOC_PATH=/opt/C3PConfig/FAQDocPath/
 
 USERNAME_TELNET=cisco
 PASSWORD_TELNET=cisco
