--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,11 @@
 			<artifactId>commons-net</artifactId>
 			<version>3.3</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-csv</artifactId>
+    		<version>1.6</version>
+		</dependency>
 
 	</dependencies>
 	<build>
