Dhanshri issue fixes

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -9,7 +9,7 @@
 #newtemplateCreationPath=D:\\C3PConfig\\NewTemplates\\
 #exportDownloadPath=D:\\C3PConfig\\RequestExport
 #importFilePath=D:\\C3PConfig\\ImportedFiles\\
-#responseDownloadPathHealthCheckFolder=D:\\C3PConfig\\HealthCheckReports
+#responseDownloadPathHealthCheckFolder=D:\\C3PConfig\\HealthCheckReports\\
 #responseDownloadPathVersion=D:\\C3PConfig\\VersionInformation
 #configurationFilesXML=D:\\C3PConfig\\configRouters.xml
 #VnfConfigCreationPath=D:\\C3PConfig\\VnfConfigurationFiles
@@ -33,7 +33,7 @@ templateCreationPath=/opt/jboss/C3PConfig/Templates/
 newtemplateCreationPath=/opt/jboss/C3PConfig/NewTemplates/
 exportDownloadPath=/opt/jboss/C3PConfig/RequestExport
 importFilePath=/opt/jboss/C3PConfig/ImportedFiles/
-responseDownloadPathHealthCheckFolder=/opt/jboss/C3PConfig/HealthCheckReports
+responseDownloadPathHealthCheckFolder=/opt/jboss/C3PConfig/HealthCheckReports/
 responseDownloadPathVersion=/opt/jboss/C3PConfig/VersionInformation
 configurationFilesXML=/opt/jboss/C3PConfig/configRouters.xml
 VnfConfigCreationPath=/opt/jboss/C3PConfig/VnfConfigurationFiles
@@ -57,7 +57,7 @@ faqDocPath=/opt/jboss/C3PConfig/FAQDocPath/
 #newtemplateCreationPath=/opt/C3PConfig/NewTemplates/
 #exportDownloadPath=/opt/C3PConfig/RequestExport
 #importFilePath=/opt/C3PConfig/ImportedFiles/
-#responseDownloadPathHealthCheckFolder=/opt/C3PConfig/HealthCheckReports
+#responseDownloadPathHealthCheckFolder=/opt/C3PConfig/HealthCheckReports/
 #responseDownloadPathVersion=/opt/C3PConfig/VersionInformation
 #configurationFilesXML=/opt/C3PConfig/configRouters.xml
 #VnfConfigCreationPath=/opt/C3PConfig/VnfConfigurationFiles
@@ -118,7 +118,7 @@ templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReco
 #NEW_TEMPLATE_CREATION_PATH=D:\\C3PConfig\\NewTemplates\\
 #EXPORT_DOWNLOAD_PATH=D:\\C3PConfig\\RequestExport
 #IMPORT_FILEPATH=D:\\C3PConfig\\ImportedFiles\\
-#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=D:\\C3PConfig\\HealthCheckReports
+#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=D:\\C3PConfig\\HealthCheckReports\\
 #RESP_DOWNLOAD_VERSION_PATH=D:\\C3PConfig\\VersionInformation
 #CONFIGURATION_FILES_XML=D:\\C3PConfig\\configRouters.xml
 #VNF_CONFIG_CREATION_PATH=D:\\C3PConfig\\VnfConfigurationFiles
@@ -142,7 +142,7 @@ TEMPLATE_CREATION_PATH=/opt/jboss/C3PConfig/Templates/
 NEW_TEMPLATE_CREATION_PATH=/opt/jboss/C3PConfig/NewTemplates/
 EXPORT_DOWNLOAD_PATH=/opt/jboss/C3PConfig/RequestExport
 IMPORT_FILEPATH=/opt/jboss/C3PConfig/ImportedFiles/
-RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/jboss/C3PConfig/HealthCheckReports
+RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/jboss/C3PConfig/HealthCheckReports/
 RESP_DOWNLOAD_VERSION_PATH=/opt/jboss/C3PConfig/VersionInformation
 CONFIGURATION_FILES_XML=/opt/jboss/C3PConfig/configRouters.xml
 VNF_CONFIG_CREATION_PATH=/opt/jboss/C3PConfig/VnfConfigurationFiles
@@ -166,7 +166,7 @@ FAQ_DOC_PATH=/opt/jboss/C3PConfig/FAQDocPath/
 #NEW_TEMPLATE_CREATION_PATH=/opt/C3PConfig/NewTemplates/
 #EXPORT_DOWNLOAD_PATH=/opt/C3PConfig/RequestExport
 #IMPORT_FILEPATH=/opt/C3PConfig/ImportedFiles/
-#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/C3PConfig/HealthCheckReports
+#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/C3PConfig/HealthCheckReports/
 #RESP_DOWNLOAD_VERSION_PATH=/opt/C3PConfig/VersionInformation
 #CONFIGURATION_FILES_XML=/opt/C3PConfig/configRouters.xml
 #VNF_CONFIG_CREATION_PATH=/opt/C3PConfig/VnfConfigurationFiles
