--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -87,7 +87,7 @@ NT4=show version
 NT5=sh ip bgp summary
 fileChunkSize=40
 
-
+REGEX_FILTER_PRE_VALIDATION_OS_VERSION=Show Version|Version|,|0,1,2|0,0,1|,,3
 RegexFilterForPreValidation=Show Version|RELEASE SOFTWARE|,|0,1,2|0,0,1|,,3
 RegexFilterForThroughput=ttcp|MByte/sec|=|,1|
 RegexFilterForFrameLoss=ttcp|loss|,|,1|
