--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -224,3 +224,4 @@ ODL_TEST_INTERFACE_BANDWIDTH=http://10.62.0.119:8181/restconf/config/network-top
 
 ODL_TEST_NEGOTIATION_TEST=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/negotiation
 ODL_TEST_BANDWIDTH_TEST=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/bandwidth
+PYTHON_SERVICES=http://10.62.0.42:5000/
