customer onboarding changes

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -129,6 +129,7 @@ templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReco
 #STATIC_XML_VNF=D:\\C3PConfig\\combinedFeatures.xml
 #SNMP_DUMP= D:\\C3PConfig\\SnmpDump\\
 #FAQ_DOC_PATH=D:\\C3PConfig\\FAQDocPath\\
+#COBTemplate= D:\\C3PConfig\\COBTemplate\\
 
 ## NAD Configuration #######
 WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
@@ -153,6 +154,7 @@ COMPARISON_HTMLS=/opt/jboss/C3PConfig/ComparisonHtmls/
 STATIC_XML_VNF=/opt/jboss/C3PConfig/combinedFeatures.xml
 SNMP_DUMP=/opt/jboss/C3PConfig/SnmpDump/
 FAQ_DOC_PATH=/opt/jboss/C3PConfig/FAQDocPath/
+COBTemplate= /opt/jboss/C3PConfig/COBTemplate/
 
 ## Megham Configuration #######
 #WEB_SERVICE_URI=http://localhost:8080
@@ -177,6 +179,7 @@ FAQ_DOC_PATH=/opt/jboss/C3PConfig/FAQDocPath/
 #STATIC_XML_VNF=/opt/C3PConfig/combinedFeatures.xml
 #SNMP_DUMP=/opt/C3PConfig/SnmpDump/
 #FAQ_DOC_PATH=/opt/C3PConfig/FAQDocPath/
+#COBTemplate= /opt/C3PConfig/COBTemplate/
 
 USERNAME_TELNET=cisco
 PASSWORD_TELNET=cisco
