--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -230,3 +230,9 @@ ODL_TEST_BANDWIDTH_TEST=http://10.62.0.119:8181/restconf/config/network-topology
 PYTHON_SERVICES=http://10.62.0.42:5000/
 
 PYTHON_PING=C3P/api/PingTest/
+PYTHON_THROUGHPUT=C3P/api/throughput/
+
+THROUGHPUT_UNIT=Mbps
+THROUGHPUT_PORT=22
+THROUGHPUT_BUFFER_SIZE=1024
+THROUGHPUT_PACKET_SIZE=60
