--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -1,49 +1,49 @@
-#webServiceURI=http://localhost:8080
-#allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
-#getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
-#saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
-#responseDownloadPath=D:\\C3PConfig\\ConfigurationFiles\\
-#analyserPath=D:\\C3PConfig\\Analyser
-#responselogpath=D:\\C3PConfig\\Logs
-#templateCreationPath=D:\\C3PConfig\\Templates\\
-#newtemplateCreationPath=D:\\C3PConfig\\NewTemplates\\
-#exportDownloadPath=D:\\C3PConfig\\RequestExport
-#importFilePath=D:\\C3PConfig\\ImportedFiles\\
-#responseDownloadPathHealthCheckFolder=D:\\C3PConfig\\HealthCheckReports\\
-#responseDownloadPathVersion=D:\\C3PConfig\\VersionInformation
-#configurationFilesXML=D:\\C3PConfig\\configRouters.xml
-#VnfConfigCreationPath=D:\\C3PConfig\\VnfConfigurationFiles
-
-#pythonScriptPath=D:\\C3PConfig\\PythonScript\\
-#standardConfigPath=D:\\C3PConfig\\StandardConfiguration\\
-#comparisonHtmls=D:\\C3PConfig\\ComparisonHtmls\\
-#staticXMLVnf=D:\\C3PConfig\\combinedFeatures.xml
-#snmpDump= D:\\C3PConfig\\SnmpDump\\
-#faqDocPath=D:\\C3PConfig\\FAQDocPath\\
-
-## NAD Configuration #######
-webServiceURI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
+webServiceURI=http://localhost:8080
 allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
 saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
-responseDownloadPath=/opt/jboss/C3PConfig/ConfigurationFiles/
-analyserPath=/opt/jboss/C3PConfig/Analyser
-responselogpath=/opt/jboss/C3PConfig/Logs
-templateCreationPath=/opt/jboss/C3PConfig/Templates/
-newtemplateCreationPath=/opt/jboss/C3PConfig/NewTemplates/
-exportDownloadPath=/opt/jboss/C3PConfig/RequestExport
-importFilePath=/opt/jboss/C3PConfig/ImportedFiles/
-responseDownloadPathHealthCheckFolder=/opt/jboss/C3PConfig/HealthCheckReports/
-responseDownloadPathVersion=/opt/jboss/C3PConfig/VersionInformation
-configurationFilesXML=/opt/jboss/C3PConfig/configRouters.xml
-VnfConfigCreationPath=/opt/jboss/C3PConfig/VnfConfigurationFiles
+responseDownloadPath=D:\\C3PConfig\\ConfigurationFiles\\
+analyserPath=D:\\C3PConfig\\Analyser
+responselogpath=D:\\C3PConfig\\Logs
+templateCreationPath=D:\\C3PConfig\\Templates\\
+newtemplateCreationPath=D:\\C3PConfig\\NewTemplates\\
+exportDownloadPath=D:\\C3PConfig\\RequestExport
+importFilePath=D:\\C3PConfig\\ImportedFiles\\
+responseDownloadPathHealthCheckFolder=D:\\C3PConfig\\HealthCheckReports\\
+responseDownloadPathVersion=D:\\C3PConfig\\VersionInformation
+configurationFilesXML=D:\\C3PConfig\\configRouters.xml
+VnfConfigCreationPath=D:\\C3PConfig\\VnfConfigurationFiles
 
-pythonScriptPath=/opt/jboss/C3PConfig/PythonScript/
-standardConfigPath=/opt/jboss/C3PConfig/StandardConfiguration/
-comparisonHtmls=/opt/jboss/C3PConfig/ComparisonHtmls/
-staticXMLVnf=/opt/jboss/C3PConfig/combinedFeatures.xml
-snmpDump=/opt/jboss/C3PConfig/SnmpDump/
-faqDocPath=/opt/jboss/C3PConfig/FAQDocPath/
+pythonScriptPath=D:\\C3PConfig\\PythonScript\\
+standardConfigPath=D:\\C3PConfig\\StandardConfiguration\\
+comparisonHtmls=D:\\C3PConfig\\ComparisonHtmls\\
+staticXMLVnf=D:\\C3PConfig\\combinedFeatures.xml
+snmpDump= D:\\C3PConfig\\SnmpDump\\
+faqDocPath=D:\\C3PConfig\\FAQDocPath\\
+
+## NAD Configuration #######
+#webServiceURI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
+#allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
+#getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
+#saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
+#responseDownloadPath=/opt/jboss/C3PConfig/ConfigurationFiles/
+#analyserPath=/opt/jboss/C3PConfig/Analyser
+#responselogpath=/opt/jboss/C3PConfig/Logs
+#templateCreationPath=/opt/jboss/C3PConfig/Templates/
+#newtemplateCreationPath=/opt/jboss/C3PConfig/NewTemplates/
+#exportDownloadPath=/opt/jboss/C3PConfig/RequestExport
+#importFilePath=/opt/jboss/C3PConfig/ImportedFiles/
+#responseDownloadPathHealthCheckFolder=/opt/jboss/C3PConfig/HealthCheckReports/
+#responseDownloadPathVersion=/opt/jboss/C3PConfig/VersionInformation
+#configurationFilesXML=/opt/jboss/C3PConfig/configRouters.xml
+#VnfConfigCreationPath=/opt/jboss/C3PConfig/VnfConfigurationFiles
+
+#pythonScriptPath=/opt/jboss/C3PConfig/PythonScript/
+#standardConfigPath=/opt/jboss/C3PConfig/StandardConfiguration/
+#comparisonHtmls=/opt/jboss/C3PConfig/ComparisonHtmls/
+#staticXMLVnf=/opt/jboss/C3PConfig/combinedFeatures.xml
+#snmpDump=/opt/jboss/C3PConfig/SnmpDump/
+#faqDocPath=/opt/jboss/C3PConfig/FAQDocPath/
 
 ## Megham Configuration #######
 #webServiceURI=http://localhost:8080
@@ -96,65 +96,65 @@ RegexFilterForFrameLoss=ttcp|loss|,|,1|
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
 
-#serverPath=http://localhost:8080
-serverPath=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
-#serverDBURL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-serverDBURL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-#templateDBURL=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
-templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
+serverPath=http://localhost:8080
+#serverPath=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
+serverDBURL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=CONVERT_TO_NULL&rewriteBatchedStatements=true
+#serverDBURL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+templateDBURL=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=CONVERT_TO_NULL&rewriteBatchedStatements=true&autoReconnect=true
+#templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
 
 
 
 ### New way of reading properties files values as an enum from the application.  ###
 ### Once after migrating the TSA.properties file related stuff. We needs to delete the lines from 1 to 50.###
-#WEB_SERVICE_URI=http://localhost:8080
-#ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
-#GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
-#SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
-#RESPONSE_DOWNLOAD_PATH=D:\\C3PConfig\\ConfigurationFiles\\
-#ANALYSER_PATH=D:\\C3PConfig\\Analyser
-#RESPONSE_LOG_PATH=D:\\C3PConfig\\Logs
-#TEMPLATE_CREATION_PATH=D:\\C3PConfig\\Templates\\
-#NEW_TEMPLATE_CREATION_PATH=D:\\C3PConfig\\NewTemplates\\
-#EXPORT_DOWNLOAD_PATH=D:\\C3PConfig\\RequestExport
-#IMPORT_FILEPATH=D:\\C3PConfig\\ImportedFiles\\
-#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=D:\\C3PConfig\\HealthCheckReports\\
-#RESP_DOWNLOAD_VERSION_PATH=D:\\C3PConfig\\VersionInformation
-#CONFIGURATION_FILES_XML=D:\\C3PConfig\\configRouters.xml
-#VNF_CONFIG_CREATION_PATH=D:\\C3PConfig\\VnfConfigurationFiles
-
-#PYTHON_SCRIPT_PATH=D:\\C3PConfig\\PythonScript\\
-#STANDARD_CONFIG_PATH=D:\\C3PConfig\\StandardConfiguration\\
-#COMPARISON_HTMLS=D:\\C3PConfig\\ComparisonHtmls\\
-#STATIC_XML_VNF=D:\\C3PConfig\\combinedFeatures.xml
-#SNMP_DUMP= D:\\C3PConfig\\SnmpDump\\
-#FAQ_DOC_PATH=D:\\C3PConfig\\FAQDocPath\\
-#COBTemplate= D:\\C3PConfig\\COBTemplate\\
-
-## NAD Configuration #######
-WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
+WEB_SERVICE_URI=http://localhost:8080
 ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
 SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
-RESPONSE_DOWNLOAD_PATH=/opt/jboss/C3PConfig/ConfigurationFiles/
-ANALYSER_PATH=/opt/jboss/C3PConfig/Analyser
-RESPONSE_LOG_PATH=/opt/jboss/C3PConfig/Logs
-TEMPLATE_CREATION_PATH=/opt/jboss/C3PConfig/Templates/
-NEW_TEMPLATE_CREATION_PATH=/opt/jboss/C3PConfig/NewTemplates/
-EXPORT_DOWNLOAD_PATH=/opt/jboss/C3PConfig/RequestExport
-IMPORT_FILEPATH=/opt/jboss/C3PConfig/ImportedFiles/
-RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/jboss/C3PConfig/HealthCheckReports/
-RESP_DOWNLOAD_VERSION_PATH=/opt/jboss/C3PConfig/VersionInformation
-CONFIGURATION_FILES_XML=/opt/jboss/C3PConfig/configRouters.xml
-VNF_CONFIG_CREATION_PATH=/opt/jboss/C3PConfig/VnfConfigurationFiles
+RESPONSE_DOWNLOAD_PATH=D:\\C3PConfig\\ConfigurationFiles\\
+ANALYSER_PATH=D:\\C3PConfig\\Analyser
+RESPONSE_LOG_PATH=D:\\C3PConfig\\Logs
+TEMPLATE_CREATION_PATH=D:\\C3PConfig\\Templates\\
+NEW_TEMPLATE_CREATION_PATH=D:\\C3PConfig\\NewTemplates\\
+EXPORT_DOWNLOAD_PATH=D:\\C3PConfig\\RequestExport
+IMPORT_FILEPATH=D:\\C3PConfig\\ImportedFiles\\
+RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=D:\\C3PConfig\\HealthCheckReports\\
+RESP_DOWNLOAD_VERSION_PATH=D:\\C3PConfig\\VersionInformation
+CONFIGURATION_FILES_XML=D:\\C3PConfig\\configRouters.xml
+VNF_CONFIG_CREATION_PATH=D:\\C3PConfig\\VnfConfigurationFiles
 
-PYTHON_SCRIPT_PATH=/opt/jboss/C3PConfig/PythonScript/
-STANDARD_CONFIG_PATH=/opt/jboss/C3PConfig/StandardConfiguration/
-COMPARISON_HTMLS=/opt/jboss/C3PConfig/ComparisonHtmls/
-STATIC_XML_VNF=/opt/jboss/C3PConfig/combinedFeatures.xml
-SNMP_DUMP=/opt/jboss/C3PConfig/SnmpDump/
-FAQ_DOC_PATH=/opt/jboss/C3PConfig/FAQDocPath/
-COBTemplate= /opt/jboss/C3PConfig/COBTemplate/
+PYTHON_SCRIPT_PATH=D:\\C3PConfig\\PythonScript\\
+STANDARD_CONFIG_PATH=D:\\C3PConfig\\StandardConfiguration\\
+COMPARISON_HTMLS=D:\\C3PConfig\\ComparisonHtmls\\
+STATIC_XML_VNF=D:\\C3PConfig\\combinedFeatures.xml
+SNMP_DUMP= D:\\C3PConfig\\SnmpDump\\
+FAQ_DOC_PATH=D:\\C3PConfig\\FAQDocPath\\
+COBTemplate= D:\\C3PConfig\\COBTemplate\\
+
+## NAD Configuration #######
+#WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
+#ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
+#GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
+#SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
+#RESPONSE_DOWNLOAD_PATH=/opt/jboss/C3PConfig/ConfigurationFiles/
+#ANALYSER_PATH=/opt/jboss/C3PConfig/Analyser
+#RESPONSE_LOG_PATH=/opt/jboss/C3PConfig/Logs
+#TEMPLATE_CREATION_PATH=/opt/jboss/C3PConfig/Templates/
+#NEW_TEMPLATE_CREATION_PATH=/opt/jboss/C3PConfig/NewTemplates/
+#EXPORT_DOWNLOAD_PATH=/opt/jboss/C3PConfig/RequestExport
+#IMPORT_FILEPATH=/opt/jboss/C3PConfig/ImportedFiles/
+#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/jboss/C3PConfig/HealthCheckReports/
+#RESP_DOWNLOAD_VERSION_PATH=/opt/jboss/C3PConfig/VersionInformation
+#CONFIGURATION_FILES_XML=/opt/jboss/C3PConfig/configRouters.xml
+#VNF_CONFIG_CREATION_PATH=/opt/jboss/C3PConfig/VnfConfigurationFiles
+
+#PYTHON_SCRIPT_PATH=/opt/jboss/C3PConfig/PythonScript/
+#STANDARD_CONFIG_PATH=/opt/jboss/C3PConfig/StandardConfiguration/
+#COMPARISON_HTMLS=/opt/jboss/C3PConfig/ComparisonHtmls/
+#STATIC_XML_VNF=/opt/jboss/C3PConfig/combinedFeatures.xml
+#SNMP_DUMP=/opt/jboss/C3PConfig/SnmpDump/
+#FAQ_DOC_PATH=/opt/jboss/C3PConfig/FAQDocPath/
+#COBTemplate= /opt/jboss/C3PConfig/COBTemplate/
 
 ## Megham Configuration #######
 #WEB_SERVICE_URI=http://localhost:8080
@@ -191,13 +191,13 @@ PASSWORD_SSH=cisco
 PORT_SSH=22
 
 USENAME_SQL=root
-#PASSWORD_SQL=root@1234
-PASSWORD_SQL=root
+PASSWORD_SQL=root@1234
+#PASSWORD_SQL=root
 DRIVER_CLASS=com.mysql.jdbc.Driver
-#URL_SQL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-URL_SQL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-URL_TEMPLATE_DB=jdbc:mysql://tool-mysql-35913-development/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
-#URL_TEMPLATE_DB=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
+URL_SQL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=CONVERT_TO_NULL&rewriteBatchedStatements=true
+#URL_SQL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+#URL_TEMPLATE_DB=jdbc:mysql://tool-mysql-35913-development/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
+URL_TEMPLATE_DB=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=CONVERT_TO_NULL&rewriteBatchedStatements=true&autoReconnect=true
 
 NETWORK_TEST_COMMAND=5
 NT1=terminal length 0
@@ -228,5 +228,12 @@ ODL_TEST_INTERFACE_BANDWIDTH=http://10.62.0.119:8181/restconf/config/network-top
 ODL_TEST_NEGOTIATION_TEST=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/negotiation
 ODL_TEST_BANDWIDTH_TEST=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/bandwidth
 PYTHON_SERVICES=http://10.62.0.42:5000/
+#PYTHON_SERVICES=http://localhost:5000/
 
 PYTHON_PING=C3P/api/PingTest/
+PYTHON_THROUGHPUT=C3P/api/throughput/
+
+THROUGHPUT_UNIT=Mbps
+THROUGHPUT_PORT=22
+THROUGHPUT_BUFFER_SIZE=1024
+THROUGHPUT_PACKET_SIZE=60
