Milestone service for Service now

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -237,3 +237,8 @@ THROUGHPUT_UNIT=Mbps
 THROUGHPUT_PORT=22
 THROUGHPUT_BUFFER_SIZE=1024
 THROUGHPUT_PACKET_SIZE=60
+
+EXTERNAL_MILESTONE_API=https://techmahindramspsvsdemo3.service-now.com/api/
+EXTERNAL_MILESTONE_API_USERNAME=webUser
+EXTERNAL_MILESTONE_API_PASSWORD=Admin*123
+
