--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -245,3 +245,4 @@ EXTERNAL_MILESTONE_API=https://techmahindramspsvsdemo3.service-now.com/api/
 EXTERNAL_MILESTONE_API_USERNAME=webUser
 EXTERNAL_MILESTONE_API_PASSWORD=Admin*123
 
+ROUTER_IP_TEMP = "10.62.0.24"
