--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -246,3 +246,5 @@ EXTERNAL_MILESTONE_API_USERNAME=webUser
 EXTERNAL_MILESTONE_API_PASSWORD=Admin*123
 
 ROUTER_IP_TEMP = "10.62.0.24"
+
+JSON_FILE =jsonFile.txt
