--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -131,8 +131,8 @@ SNMP_DUMP= D:\\C3PConfig\\SnmpDump\\
 FAQ_DOC_PATH=D:\\C3PConfig\\FAQDocPath\\
 COBTemplate= D:\\C3PConfig\\COBTemplate\\
 IMAGE_FILE_PATH= D:\\C3PConfig\\ImageFiles\\
-#FOLDER_SEPARATOR=\\
-FOLDER_SEPARATOR=/
+FOLDER_SEPARATOR=\\
+
 
 ## NAD Configuration #######
 #WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
@@ -159,7 +159,6 @@ FOLDER_SEPARATOR=/
 #FAQ_DOC_PATH=/opt/jboss/C3PConfig/FAQDocPath/
 #COBTemplate= /opt/jboss/C3PConfig/COBTemplate/
 #IMAGE_FILE_PATH= /opt/jboss/C3PConfig/ImageFiles/
-#FOLDER_SEPARATOR=\\
 #FOLDER_SEPARATOR=/
 
 ## Megham Configuration #######
@@ -187,7 +186,6 @@ FOLDER_SEPARATOR=/
 #FAQ_DOC_PATH=/opt/C3PConfig/FAQDocPath/
 #COBTemplate= /opt/C3PConfig/COBTemplate/
 #IMAGE_FILE_PATH= /opt/C3PConfig/ImageFiles/
-#FOLDER_SEPARATOR=\\
 #FOLDER_SEPARATOR=/
 
 
