Fixes for date formatting and remaining P1 bugs

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -256,3 +256,4 @@ EXTERNAL_MILESTONE_API_PASSWORD=Admin*123
 ROUTER_IP_TEMP = "10.62.0.24"
 
 JSON_FILE =jsonFile.txt
+C3P_APPLICATION_SERVER_TIMEZONE = Asia/Kolkata
