changed tsa properties

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -132,6 +132,7 @@ FAQ_DOC_PATH=D:\\C3PConfig\\FAQDocPath\\
 COBTemplate= D:\\C3PConfig\\COBTemplate\\
 IMAGE_FILE_PATH= D:\\C3PConfig\\ImageFiles\\
 FOLDER_SEPARATOR=\\
+DOWNLOAD_PATH= D:\\C3PConfig\\DownloadFilePath\\
 
 
 ## NAD Configuration #######
@@ -160,6 +161,7 @@ FOLDER_SEPARATOR=\\
 #COBTemplate= /opt/jboss/C3PConfig/COBTemplate/
 #IMAGE_FILE_PATH= /opt/jboss/C3PConfig/ImageFiles/
 #FOLDER_SEPARATOR=/
+#DOWNLOAD_PATH= /opt/jboss/C3PConfig/DownloadFilePath/
 
 ## Megham Configuration #######
 #WEB_SERVICE_URI=http://localhost:8080
@@ -187,6 +189,7 @@ FOLDER_SEPARATOR=\\
 #COBTemplate= /opt/C3PConfig/COBTemplate/
 #IMAGE_FILE_PATH= /opt/C3PConfig/ImageFiles/
 #FOLDER_SEPARATOR=/
+#DOWNLOAD_PATH= /opt/C3PConfig/DownloadFilePath/
 
 
 USERNAME_TELNET=cisco
