--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -248,6 +248,7 @@ PYTHON_THROUGHPUT=C3P/api/throughput/
 IP_MANAGEMENT=/C3P/api/ipCalculator/
 PYTHON_BACKUP=C3P/api/backupVNF/
 PYTHON_SCHEDULER=C3P/api/schedular
+PYTHON_REPORT=C3P/api/generatePdf/
 
 THROUGHPUT_UNIT=Mbps
 THROUGHPUT_PORT=22
