--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -250,6 +250,7 @@ PYTHON_BACKUP=C3P/api/backupVNF/
 PYTHON_SCHEDULER=C3P/api/schedular
 PYTHON_REPORT=C3P/api/generatePdf/
 PYTHON_EDIT_NETCONF=C3P/api/netconfedit/
+PYTHON_TEST_NETCONF=C3P/api/netconftest/
 
 THROUGHPUT_UNIT=Mbps
 THROUGHPUT_PORT=22
