--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,25 @@ spring.mvc.view.suffix: .jsp
 server.port: 8024
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull
-spring.datasource.url=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull
+#spring.datasource.url=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-#spring.datasource.password=root@1234
-spring.datasource.password=root
+spring.datasource.password=root@1234
+#spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
 
-
 spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE 
+
+###########################################################
+# OAuth2 client configuration for Python authorization server
+###########################################################
+python.oauth2.client.access-token-uri=http://localhost:5000/C3P/api/oauth/token
+python.oauth2.client.client-id=bdTLFy0W3QiOu7OyM0N8rPTo
+python.oauth2.client.client-secret=19CI0k3dsAeGNZ2ggH40zqjI2ZO2BkTAfan9cNk0vXut2EHB
+python.oauth2.client.grantType=password
+python.user.name=c3puser
+python.user.password=admin
