--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,12 @@
     		<artifactId>commons-csv</artifactId>
     		<version>1.6</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>com.itextpdf</groupId>
+    		<artifactId>html2pdf</artifactId>
+   			 <version>3.0.5</version>
+		</dependency>
 
 	</dependencies>
 	<build>
