--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -77,6 +77,7 @@ AjaxCallIntervalForPullNotification=180
 usernameSSH=cisco
 passwordSSH=cisco
 portSSH=22
+REQ_TIME=10000
 
 
 networkTestCommand=5
@@ -91,6 +92,7 @@ REGEX_FILTER_PRE_VALIDATION_OS_VERSION=Show Version|Version|,|0,1,2|0,0,1|,,3
 RegexFilterForPreValidation=Show Version|RELEASE SOFTWARE|,|0,1,2|0,0,1|,,3
 RegexFilterForThroughput=ttcp|MByte/sec|=|,1|
 RegexFilterForFrameLoss=ttcp|loss|,|,1|
+REGEX_FILTER_FW_MEM=bytes available|bytes_available|bytes free|free space|available space
 
 
 spring.servlet.multipart.max-file-size=500KB
@@ -133,6 +135,9 @@ COBTemplate= D:\\C3PConfig\\COBTemplate\\
 IMAGE_FILE_PATH= D:\\C3PConfig\\ImageFiles\\
 FOLDER_SEPARATOR=\\
 DOWNLOAD_PATH= D:\\C3PConfig\\DownloadFilePath\\
+SOURCE=  D:\\C3PConfig\\ImageFiles\\
+FW_UPGADE=http://localhost:8080
+REQ_SLASHN=0
 
 
 ## NAD Configuration #######
@@ -162,6 +167,9 @@ DOWNLOAD_PATH= D:\\C3PConfig\\DownloadFilePath\\
 #IMAGE_FILE_PATH= /opt/jboss/C3PConfig/ImageFiles/
 #FOLDER_SEPARATOR=/
 #DOWNLOAD_PATH= /opt/jboss/C3PConfig/DownloadFilePath/
+#SOURCE=  /opt/jboss/C3PConfig/ImageFiles/
+#FW_UPGADE=http://localhost:8080
+#REQ_SLASHN=0
 
 ## Megham Configuration #######
 #WEB_SERVICE_URI=http://localhost:8080
@@ -190,7 +198,9 @@ DOWNLOAD_PATH= D:\\C3PConfig\\DownloadFilePath\\
 #IMAGE_FILE_PATH= /opt/C3PConfig/ImageFiles/
 #FOLDER_SEPARATOR=/
 #DOWNLOAD_PATH= /opt/C3PConfig/DownloadFilePath/
-
+#SOURCE=  /opt/C3PConfig/ImageFiles/
+#FW_UPGADE=http://localhost:8080
+#REQ_SLASHN=0
 
 USERNAME_TELNET=cisco
 PASSWORD_TELNET=cisco
