--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -251,6 +251,7 @@ PYTHON_SCHEDULER=C3P/api/schedular
 PYTHON_REPORT=C3P/api/generatePdf/
 PYTHON_EDIT_NETCONF=C3P/api/netconfedit/
 PYTHON_TEST_NETCONF=C3P/api/netconftest/
+PYTHON_DIFFLIB_DELTA_COMPUTE=C3P/api/configdelta/
 
 THROUGHPUT_UNIT=Mbps
 THROUGHPUT_PORT=22
