--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -261,6 +261,7 @@ PYTHON_REPORT=C3P/api/generatePdf/
 PYTHON_EDIT_NETCONF=C3P/api/netconfedit/
 PYTHON_TEST_NETCONF=C3P/api/netconftest/
 PYTHON_DIFFLIB_DELTA_COMPUTE=C3P/api/configdelta/
+PYTHON_DEVICE_DATA = C3P/api/updateDevieRole
 
 THROUGHPUT_UNIT=Mbps
 THROUGHPUT_PORT=22
