Telstra environment related fixes

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -228,6 +228,7 @@ NT5=sh ip bgp summary
 FILE_CHUNK_SIZE=40
 #APP_OS=Windows
 APP_OS=Linux
+JSCH_CHANNEL_INPUT_BUFFER_SIZE=104857600
 
 REGEX_FILTER_PRE_VALIDATION_OS_VERSION=Show Version|Version|,|0,1,2|0,0,1|,,3
 REGEX_FILTER_PRE_VALIDATION=Show Version|RELEASE SOFTWARE|,|0,1,2|0,0,1|,,3
