--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -263,6 +263,7 @@ PYTHON_EDIT_NETCONF=C3P/api/netconfedit/
 PYTHON_TEST_NETCONF=C3P/api/netconftest/
 PYTHON_DIFFLIB_DELTA_COMPUTE=C3P/api/configdelta/
 PYTHON_DEVICE_DATA = C3P/api/updateDevieRole
+PYTHON_UPDATE_HOST_STATUS = C3P/api/updateHostStatus
 
 THROUGHPUT_UNIT=Mbps
 THROUGHPUT_PORT=22
