Corrected the SN Ven instance information for Milestone API

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -271,7 +271,8 @@ THROUGHPUT_BUFFER_SIZE=1024
 BACKUP_PORT=830
 THROUGHPUT_PACKET_SIZE=60
 
-EXTERNAL_MILESTONE_API=https://techmahindramspsvsdemo3.service-now.com/api/
+#EXTERNAL_MILESTONE_API=https://techmahindramspsvsdemo3.service-now.com/api/now/table/u_imp_stage_status
+EXTERNAL_MILESTONE_API=https://ven04239.service-now.com/api/now/table/x_tmmsp_c3p_imp_stage_status
 EXTERNAL_MILESTONE_API_USERNAME=webUser
 EXTERNAL_MILESTONE_API_PASSWORD=Admin*123
 
