--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -271,8 +271,17 @@ THROUGHPUT_BUFFER_SIZE=1024
 BACKUP_PORT=830
 THROUGHPUT_PACKET_SIZE=60
 
-#EXTERNAL_MILESTONE_API=https://techmahindramspsvsdemo3.service-now.com/api/now/table/u_imp_stage_status
-EXTERNAL_MILESTONE_API=https://ven04239.service-now.com/api/now/table/x_tmmsp_c3p_imp_stage_status
+## Service Now Properties are different from Tech M & VEN instance. For GCP Dev use Tech M properties & for GCP Stage use VEN instance
+EXTERNAL_MILESTONE_API=https://techmahindramspsvsdemo3.service-now.com/api/now/table/u_imp_stage_status
+EXTERNAL_MILESTONE_NAME=u_milestone_name
+EXTERNAL_MILESTONE_STATUS=u_status
+EXTERNAL_MILESTONE_SO_ID=u_so_id
+
+#EXTERNAL_MILESTONE_API=https://ven04239.service-now.com/api/now/table/x_tmmsp_c3p_imp_stage_status
+#EXTERNAL_MILESTONE_NAME=milestone_name
+#EXTERNAL_MILESTONE_STATUS=status
+#EXTERNAL_MILESTONE_SO_ID=so_id
+
 EXTERNAL_MILESTONE_API_USERNAME=webUser
 EXTERNAL_MILESTONE_API_PASSWORD=Admin*123
 
