Fixed the C3P-2931 issue

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -3,8 +3,8 @@ allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
 saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
 responseDownloadPath=D:\\C3PConfig\\ConfigurationFiles\\
-analyserPath=D:\\C3PConfig\\Analyser
-responselogpath=D:\\C3PConfig\\Logs
+analyserPath=D:\\C3PConfig\\Analyser\\
+responselogpath=D:\\C3PConfig\\Logs\\
 templateCreationPath=D:\\C3PConfig\\Templates\\
 newtemplateCreationPath=D:\\C3PConfig\\NewTemplates\\
 exportDownloadPath=D:\\C3PConfig\\RequestExport
@@ -27,8 +27,8 @@ faqDocPath=D:\\C3PConfig\\FAQDocPath\\
 #getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
 #saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
 #responseDownloadPath=/opt/jboss/C3PConfig/ConfigurationFiles/
-#analyserPath=/opt/jboss/C3PConfig/Analyser
-#responselogpath=/opt/jboss/C3PConfig/Logs
+#analyserPath=/opt/jboss/C3PConfig/Analyser/
+#responselogpath=/opt/jboss/C3PConfig/Logs/
 #templateCreationPath=/opt/jboss/C3PConfig/Templates/
 #newtemplateCreationPath=/opt/jboss/C3PConfig/NewTemplates/
 #exportDownloadPath=/opt/jboss/C3PConfig/RequestExport
@@ -51,8 +51,8 @@ faqDocPath=D:\\C3PConfig\\FAQDocPath\\
 #getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
 #saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
 #responseDownloadPath=/opt/C3PConfig/ConfigurationFiles/
-#analyserPath=/opt/C3PConfig/Analyser
-#responselogpath=/opt/C3PConfig/Logs
+#analyserPath=/opt/C3PConfig/Analyser/
+#responselogpath=/opt/C3PConfig/Logs/
 #templateCreationPath=/opt/C3PConfig/Templates/
 #newtemplateCreationPath=/opt/C3PConfig/NewTemplates/
 #exportDownloadPath=/opt/C3PConfig/RequestExport
@@ -114,8 +114,8 @@ ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDet
 GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
 SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
 RESPONSE_DOWNLOAD_PATH=D:\\C3PConfig\\ConfigurationFiles\\
-ANALYSER_PATH=D:\\C3PConfig\\Analyser
-RESPONSE_LOG_PATH=D:\\C3PConfig\\Logs
+ANALYSER_PATH=D:\\C3PConfig\\Analyser\\
+RESPONSE_LOG_PATH=D:\\C3PConfig\\Logs\\
 TEMPLATE_CREATION_PATH=D:\\C3PConfig\\Templates\\
 NEW_TEMPLATE_CREATION_PATH=D:\\C3PConfig\\NewTemplates\\
 EXPORT_DOWNLOAD_PATH=D:\\C3PConfig\\RequestExport
@@ -145,8 +145,8 @@ REQ_SLASHN=0
 #GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
 #SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
 #RESPONSE_DOWNLOAD_PATH=/opt/jboss/C3PConfig/ConfigurationFiles/
-#ANALYSER_PATH=/opt/jboss/C3PConfig/Analyser
-#RESPONSE_LOG_PATH=/opt/jboss/C3PConfig/Logs
+#ANALYSER_PATH=/opt/jboss/C3PConfig/Analyser/
+#RESPONSE_LOG_PATH=/opt/jboss/C3PConfig/Logs/
 #TEMPLATE_CREATION_PATH=/opt/jboss/C3PConfig/Templates/
 #NEW_TEMPLATE_CREATION_PATH=/opt/jboss/C3PConfig/NewTemplates/
 #EXPORT_DOWNLOAD_PATH=/opt/jboss/C3PConfig/RequestExport
@@ -176,8 +176,8 @@ REQ_SLASHN=0
 #GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
 #SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
 #RESPONSE_DOWNLOAD_PATH=/opt/C3PConfig/ConfigurationFiles/
-#ANALYSER_PATH=/opt/C3PConfig/Analyser
-#RESPONSE_LOG_PATH=/opt/C3PConfig/Logs
+#ANALYSER_PATH=/opt/C3PConfig/Analyser/
+#RESPONSE_LOG_PATH=/opt/C3PConfig/Logs/
 #TEMPLATE_CREATION_PATH=/opt/C3PConfig/Templates/
 #NEW_TEMPLATE_CREATION_PATH=/opt/C3PConfig/NewTemplates/
 #EXPORT_DOWNLOAD_PATH=/opt/C3PConfig/RequestExport
