--- a/src/main/resources/application-gcpdev.properties
+++ b/src/main/resources/application-gcpdev.properties
@@ -1,4 +1,3 @@
-spring.profiles.active=@activatedProperties@
 spring.mvc.view.prefix: /
 spring.mvc.view.suffix: .jsp
 server.port: 8024
@@ -23,7 +22,7 @@ spring.oauth2.resourceserver.jwt-token-key=c3papplicationkey
 ###########################################################
 # OAuth2 client configuration for Python authorization server
 ###########################################################
-python.oauth2.client.access-token-uri=http://localhost:5000/C3P/api/oauth/token
+python.oauth2.client.access-token-uri=http://10.179.72.6:5000/C3P/api/oauth/token
 python.oauth2.client.client-id=bdTLFy0W3QiOu7OyM0N8rPTo
 python.oauth2.client.client-secret=19CI0k3dsAeGNZ2ggH40zqjI2ZO2BkTAfan9cNk0vXut2EHB
 python.oauth2.client.grantType=password
@@ -36,7 +35,7 @@ python.user.password=admin
 bpm.service.uri=http://localhost:8080
 
 ## Python microservice information
-python.service.uri=http://localhost:5000/
+python.service.uri=http://10.179.72.6:5000/
 
 ## Service Now instance information
 external.system.servicenow.service.uri=https://techmahindramspsvsdemo3.service-now.com/api/now/table/u_imp_stage_status
