--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -1,10 +1,9 @@
-spring.profiles.active=@activatedProperties@
 spring.mvc.view.prefix: /
 spring.mvc.view.suffix: .jsp
 server.port: 8024
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://10.179.72.8:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root@1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
@@ -23,7 +22,7 @@ spring.oauth2.resourceserver.jwt-token-key=c3papplicationkey
 ###########################################################
 # OAuth2 client configuration for Python authorization server
 ###########################################################
-python.oauth2.client.access-token-uri=http://localhost:5000/C3P/api/oauth/token
+python.oauth2.client.access-token-uri=http://10.179.72.8:5000/C3P/api/oauth/token
 python.oauth2.client.client-id=bdTLFy0W3QiOu7OyM0N8rPTo
 python.oauth2.client.client-secret=19CI0k3dsAeGNZ2ggH40zqjI2ZO2BkTAfan9cNk0vXut2EHB
 python.oauth2.client.grantType=password
@@ -36,9 +35,9 @@ python.user.password=admin
 bpm.service.uri=http://localhost:8080
 
 ## Python microservice information
-python.service.uri=http://localhost:5000/
+python.service.uri=http://10.179.72.8:5000/
 
 ## Service Now instance information
-external.system.servicenow.service.uri=https://techmahindramspsvsdemo3.service-now.com/api/now/table/u_imp_stage_status
+external.system.servicenow.service.uri=https://ven04239.service-now.com/api/now/table/x_tmmsp_c3p_imp_stage_status
 external.system.servicenow.service.username=webUser
 external.system.servicenow.service.password=Admin*123
