Configured JDBC connection with spring configuration

--- a/src/main/resources/C3PCoreApp.properties
+++ b/src/main/resources/C3PCoreApp.properties
@@ -66,10 +66,10 @@ REQ_SLASHN=0
 AJAX_CALL_INTERVAL_FOR_PULL_NOTOFICATION=180
 PORT_SSH=22
 
-USENAME_SQL=root
-PASSWORD_SQL=root@1234
-DRIVER_CLASS=com.mysql.jdbc.Driver
-URL_SQL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=CONVERT_TO_NULL&rewriteBatchedStatements=true
+#USENAME_SQL=root
+#PASSWORD_SQL=root@1234
+#DRIVER_CLASS=com.mysql.jdbc.Driver
+#URL_SQL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=CONVERT_TO_NULL&rewriteBatchedStatements=true
 
 NETWORK_TEST_COMMAND=5
 NT1=terminal length 0
@@ -118,17 +118,6 @@ THROUGHPUT_PORT=22
 THROUGHPUT_BUFFER_SIZE=1024
 BACKUP_PORT=830
 THROUGHPUT_PACKET_SIZE=60
-
-## Service Now Properties are different from Tech M & VEN instance. For GCP Dev use Tech M properties & for GCP Stage use VEN instance
-EXTERNAL_MILESTONE_NAME=u_milestone_name
-EXTERNAL_MILESTONE_STATUS=u_status
-EXTERNAL_MILESTONE_SO_ID=u_so_id
-
-#EXTERNAL_MILESTONE_NAME=milestone_name
-#EXTERNAL_MILESTONE_STATUS=status
-#EXTERNAL_MILESTONE_SO_ID=so_id
-
-ROUTER_IP_TEMP = "10.62.0.24"
 
 JSON_FILE =jsonFile.txt
 C3P_APPLICATION_SERVER_TIMEZONE = Asia/Kolkata
