--- a/src/main/resources/application-gcpdev.properties
+++ b/src/main/resources/application-gcpdev.properties
@@ -38,6 +38,6 @@ bpm.service.uri=http://localhost:8080
 python.service.uri=http://10.179.72.6:5000/
 
 ## Service Now instance information
-external.system.servicenow.service.uri=https://techmahindramspsvsdemo3.service-now.com/api/now/table/u_imp_stage_status
+external.system.servicenow.service.uri=https://ven04239.service-now.com/api/now/table/x_tmmsp_c3p_imp_stage_status
 external.system.servicenow.service.username=webUser
 external.system.servicenow.service.password=Admin*123
