--- a/src/main/resources/C3PCoreApp.properties
+++ b/src/main/resources/C3PCoreApp.properties
@@ -55,7 +55,7 @@ COMPARISON_HTMLS=/opt/C3PConfig/ComparisonHtmls/
 STATIC_XML_VNF=/opt/C3PConfig/combinedFeatures.xml
 SNMP_DUMP=/opt/C3PConfig/SnmpDump/
 FAQ_DOC_PATH=/opt/C3PConfig/FAQDocPath/
-COBTemplate= /opt/C3PConfig/COBTemplate/
+COB_TEMPLATE= /opt/C3PConfig/COBTemplate/
 IMAGE_FILE_PATH= /opt/C3PConfig/ImageFiles/
 FOLDER_SEPARATOR=/
 DOWNLOAD_PATH= /opt/C3PConfig/DownloadFilePath/
