paths updated for terraform

--- a/src/main/resources/C3PCoreApp.properties
+++ b/src/main/resources/C3PCoreApp.properties
@@ -64,8 +64,8 @@ FOLDER_SEPARATOR=/
 DOWNLOAD_PATH= /opt/C3PConfig/DownloadFilePath/
 SOURCE=  /opt/C3PConfig/ImageFiles/
 TERRAFORM = /opt/C3PConfig/Terraform/
-TERRAFORM_OPENSTACK = /opt/C3PConfig/Openstack/
-TERRAFORM_GCP = /opt/C3PConfig/GCP/
+TERRAFORM_OPENSTACK = /opt/C3PConfig/Terraform/Templates/Openstack/
+TERRAFORM_GCP = /opt/C3PConfig/Terraform/Templates/GCP/
 FW_UPGADE=http://localhost:8080
 REQ_SLASHN=0
 
