--- a/src/main/resources/C3PCoreApp.properties
+++ b/src/main/resources/C3PCoreApp.properties
@@ -135,3 +135,7 @@ SINGLE_REQUEST_CREATE_BACKUP =/C3P/BackUpConfigurationAndTest/createConfiguratio
 FW_UPGADE=/engine-rest/process-definition/key/C3P_FWUpgrade_workflow/start
 
 SECRET_KEY = aaabbbbbbbbbbb!!!!
+
+VMME_DEVICE_1=6000000
+VMME_DEVICE_2=6000001
+VMME_DEVICE_3=6000003
