--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<properties>
 		<wildfly_home>target</wildfly_home>
-		<resteasy.version>3.1.3.Final</resteasy.version>		
+		<resteasy.version>3.1.3.Final</resteasy.version>
 		<oauth.version>2.3.5.RELEASE</oauth.version>
 		<jwt.version>1.0.10.RELEASE</jwt.version>
 		<jaxb.api.version>2.3.0</jaxb.api.version>
@@ -22,8 +22,8 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.3.5.RELEASE</version>
 	</parent>
-	
-	
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -59,12 +59,12 @@
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
-            <version>${oauth.version}</version>
+			<version>${oauth.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
-            <version>${jwt.version}</version>
+			<version>${jwt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
@@ -157,9 +157,9 @@
 			<version>8.0.23</version>
 		</dependency>
 		<dependency>
-		    <groupId>javax.xml.bind</groupId>
-		    <artifactId>jaxb-api</artifactId>
-		    <version>2.1</version>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.1</version>
 		</dependency>
 
 		<dependency>
@@ -199,17 +199,27 @@
 			<version>3.3</version>
 		</dependency>
 		<dependency>
-    		<groupId>org.apache.commons</groupId>
-    		<artifactId>commons-csv</artifactId>
-    		<version>1.6</version>
-		</dependency>
-		
-		<dependency>
-    		<groupId>com.itextpdf</groupId>
-    		<artifactId>html2pdf</artifactId>
-   			 <version>3.0.5</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>html2pdf</artifactId>
+			<version>3.0.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>C3P</finalName>
@@ -237,32 +247,32 @@
 		</plugins>
 	</build>
 	<profiles>
-        <profile>
-            <id>dev</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <activatedProperties>dev</activatedProperties>
-            </properties>
-        </profile>
-         <profile>
-            <id>gcpdev</id>
-            <properties>
-                <activatedProperties>gcpdev</activatedProperties>
-            </properties>
-        </profile>
-        <profile>
-            <id>stage</id>
-            <properties>
-                <activatedProperties>stage</activatedProperties>
-            </properties>
-        </profile>
-        <profile>
-            <id>gkedemo</id>            
-            <properties>
-                <activatedProperties>gkedemo</activatedProperties>
-            </properties>
-        </profile>
-    </profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<activatedProperties>dev</activatedProperties>
+			</properties>
+		</profile>
+		<profile>
+			<id>gcpdev</id>
+			<properties>
+				<activatedProperties>gcpdev</activatedProperties>
+			</properties>
+		</profile>
+		<profile>
+			<id>stage</id>
+			<properties>
+				<activatedProperties>stage</activatedProperties>
+			</properties>
+		</profile>
+		<profile>
+			<id>gkedemo</id>
+			<properties>
+				<activatedProperties>gkedemo</activatedProperties>
+			</properties>
+		</profile>
+	</profiles>
 </project>
