Added Notification url

--- a/src/main/resources/application-gcpdev.properties
+++ b/src/main/resources/application-gcpdev.properties
@@ -37,6 +37,9 @@ bpm.service.uri=http://localhost:8080
 ## Python microservice information
 python.service.uri=http://10.179.72.6:5000/
 
+## C3P Camunda Notification microservice information
+notify.service.uri=http://localhost:8080
+
 ## Service Now instance information
 external.system.servicenow.service.uri=https://ven04239.service-now.com/api/now/table/x_tmmsp_c3p_imp_stage_status
 external.system.servicenow.service.username=webUser
