--- a/src/main/resources/application-gkedemo.properties
+++ b/src/main/resources/application-gkedemo.properties
@@ -37,6 +37,9 @@ bpm.service.uri=http://34.93.132.73
 ## Python microservice information
 python.service.uri=http://34.93.157.28/
 
+## C3P Camunda Notification microservice information
+notify.service.uri=http://34.93.132.73
+
 ## Service Now instance information
 external.system.servicenow.service.uri=https://ven04239.service-now.com/api/now/table/x_tmmsp_c3p_imp_stage_status
 external.system.servicenow.service.username=webUser
