--- a/src/main/resources/application-stage.properties
+++ b/src/main/resources/application-stage.properties
@@ -32,6 +32,9 @@ bpm.service.uri=http://localhost:8080
 ## Python microservice information
 python.service.uri=http://localhost:5000/
 
+## C3P Camunda Notification microservice information
+notify.service.uri=http://localhost:8080
+
 ## Service Now instance information
 external.system.servicenow.service.uri=https://techmahindramspsvsdemo3.service-now.com/api/now/table/x_tmmsp_c3p_imp_stage_status
 external.system.servicenow.service.username=webUser
