--- a/src/main/resources/C3PCoreApp.properties
+++ b/src/main/resources/C3PCoreApp.properties
@@ -119,6 +119,9 @@ PYTHON_DIFFLIB_DELTA_COMPUTE=C3P/api/configdelta/
 PYTHON_DEVICE_DATA = C3P/api/updateDevieRole
 PYTHON_UPDATE_HOST_STATUS = C3P/api/updateHostStatus
 PYTHON_CNF_INSTANCE_CREATE=C3P/api/deploy/instance
+## python url for ID generation tool
+PYTHON_GENERATE_ID=C3P/core/generateId
+
 
 THROUGHPUT_UNIT=Mbps
 THROUGHPUT_PORT=22
